# NTFAL

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  config.toml  journal.py  pyproject.toml  run.py
app/: __init__.py  main.py  pipeline.py
app/static/: dashboard.css  dashboard.js
app/templates/: dashboard.html
data/: __init__.py  hyperliquid.py
indicators/: __init__.py  ema.py  force_index.py  impulse.py  macd.py
risk/: __init__.py  sizing.py
strategy/: __init__.py  params.py  trade_management.py  triple_screen.py
tests/: conftest.py  test_app.py  test_hyperliquid.py  test_indicators.py  test_sizing.py  test_trade_management.py  test_triple_screen.py
tests/fixtures/: btc_1d.json  btc_1w.json
