[project]
name = "ntfal"
version = "0.1.0"
description = "Elder Triple Screen scanner for Hyperliquid perps — read-only daily analysis tool"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "pyarrow>=16",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "black>=24",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
